<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_certified_completion"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.returns.CertifiedCompletionActivity"
    android:background="@color/white_FAFDFF" >

    <TextView
        android:id="@+id/tv_certified_completion_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/certified_completion_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_certified_completion_content_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/shape_fill_white_e9f1ff_stroke_r16_rect"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_certified_completion_title">

        <ImageView
            android:id="@+id/iv_certified_completion_content_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_coin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_certified_completion_content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_up_point_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_certified_completion_content_icon" />

        <TextView
            android:id="@+id/tv_certified_completion_content_title_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100p"
            android:layout_marginTop="-10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_certified_completion_content_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_certified_completion_content_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_certified_completion_content_title_point"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_certified_completion_content_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_title_location"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_certified_completion_content_location_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00 카페"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_certified_completion_content_location_title"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_certified_completion_content_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/detail_title_date"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_certified_completion_content_location_title" />

            <TextView
                android:id="@+id/tv_certified_completion_content_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="2024년 OO월 OO일 OO시 OO분"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_certified_completion_content_date_title"
                app:layout_constraintTop_toBottomOf="@id/tv_certified_completion_content_location_title" />

            <TextView
                android:id="@+id/tv_certified_completion_content_point_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/detail_title_point"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_certified_completion_content_date_title" />

            <TextView
                android:id="@+id/tv_certified_completion_content_point_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="512p"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_certified_completion_content_point_title"
                app:layout_constraintTop_toBottomOf="@id/tv_certified_completion_content_date_title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_certified_completion_home"
                android:layout_width="124dp"
                android:layout_height="48dp"
                android:layout_marginTop="27dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/shape_d1e9ff_fill_stroke_f0ebe8_r50_rect"
                android:text="@string/go_home"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_certified_completion_content_point_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>