<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="33dp"
    android:background="@color/white_FAFDFF">

    <TextView
        android:id="@+id/tv_mypage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/mypage_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_mypage_user_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@id/tv_mypage_title">

        <ImageView
            android:id="@+id/iv_mypage_user_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_user" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_mypage_user_icon" >

            <TextView
                android:id="@+id/tv_mypage_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_mypage_user_info"
                android:layout_marginStart="12dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="황규혁님" />

            <EditText
                android:visibility="invisible"
                android:id="@+id/et_edit_user_name"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_mypage_user_info"
                android:layout_marginStart="6dp"
                android:background="@drawable/shape_white_fill_7ec1fe_stroke_r5_rect"
                android:inputType="textLongMessage"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="황규혁" />

            <ImageView
                android:id="@+id/iv_edit_user_name_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="@id/tv_mypage_user_name"
                app:layout_constraintBottom_toBottomOf="@id/tv_mypage_user_name"
                app:layout_constraintStart_toEndOf="@id/tv_mypage_user_name"
                android:layout_marginStart="9.67dp"
                android:src="@drawable/ic_edit" />

            <TextView
                android:id="@+id/tv_mypage_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_user_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="개인회원 / 남자" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_mypage_btn"
            android:layout_width="90dp"
            android:layout_height="29dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/selector_mypage_btn" >

            <TextView
                android:id="@+id/cl_mypage_btn_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/logout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_multiuse_state_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_mypage_user_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="33dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/user_multiuse_state" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tv_multiuse_state_content"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintTop_toBottomOf="@id/tv_multiuse_state_title"
        android:layout_marginTop="11dp"
        android:paddingTop="37dp"
        android:paddingBottom="45dp"
        android:background="@drawable/shape_fill_white_e9f1ff_stroke_r16_rect">

        <TextView
            android:id="@+id/tv_multiuse_state_point_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/v_vertical_line_1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/current_point" />

        <TextView
            android:id="@+id/tv_multiuse_state_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1126p"
            android:textColor="@color/blue_7EC1FE"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/v_vertical_line_1"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/v_vertical_line_1"
            android:layout_width="1dp"
            android:layout_height="94.01dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_multiuse_state_point_title"
            app:layout_constraintEnd_toStartOf="@id/tv_multiuse_state_rental_count_title"
            android:background="@color/blue_E9F1FF" />

        <TextView
            android:id="@+id/tv_multiuse_state_rental_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/v_vertical_line_1"
            app:layout_constraintEnd_toStartOf="@id/v_vertical_line_2"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/rental_count" />

        <TextView
            android:id="@+id/tv_multiuse_state_rental_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8회"
            android:textColor="@color/blue_7EC1FE"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/v_vertical_line_2"
            app:layout_constraintStart_toStartOf="@id/v_vertical_line_1" />

        <View
            android:id="@+id/v_vertical_line_2"
            android:layout_width="1dp"
            android:layout_height="94.01dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_multiuse_state_rental_count_title"
            app:layout_constraintEnd_toStartOf="@id/tv_multiuse_state_return_count_title"
            android:background="@color/blue_E9F1FF" />

        <TextView
            android:id="@+id/tv_multiuse_state_return_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/v_vertical_line_2"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/rental_count" />

        <TextView
            android:id="@+id/tv_multiuse_state_return_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5회"
            android:textColor="@color/blue_7EC1FE"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/v_vertical_line_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_mypage_statistics_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_multiuse_state_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/multiuse_statistics" />

    <RadioGroup
        android:id="@+id/rg_mypage_statistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_mypage_statistics_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <RadioButton
            android:checked="true"
            android:id="@+id/rb_week_statistic"
            android:layout_width="64dp"
            android:layout_height="22dp"
            android:background="@drawable/selector_radio_btn_statistics"
            android:textColor="@drawable/selector_radio_text_statistics"
            android:layout_marginEnd="8dp"
            android:button="@null"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="bold"
            android:text="@string/week_statistics"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/rb_month_statistic"
            android:layout_width="64dp"
            android:layout_height="22dp"
            android:background="@drawable/selector_radio_btn_statistics"
            android:textColor="@drawable/selector_radio_text_statistics"
            android:button="@null"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="bold"
            android:text="@string/month_statistics"
            android:gravity="center"/>

    </RadioGroup>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bc_week_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/rg_mypage_statistic"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp" />


    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bc_month_chart"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/rg_mypage_statistic"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>